--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>LinuxHomePage 2</title>
+    <title>LinuxReport</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
    * {
