Delete cookie, News.ycombinator, linuxreport URL

--- a/templates/config.html
+++ b/templates/config.html
@@ -20,8 +20,10 @@
 </head>
 <body>
 <form method="POST">
-  {{ form.urls }}
-  {{ form.url_custom }}
+    Delete the cookie:
+    {{ form.delete_cookie }}
+    {{ form.urls }}
+    {{ form.url_custom }}
     <button type="save" name="save">Save</button>
 </form>
 </body>
