--- a/templates/page.html
+++ b/templates/page.html
@@ -44,7 +44,7 @@
 
   <script>
     function redirect() {
-        window.location = "/linuxhomepage/config"          
+        window.location = "/linuxreport/config"
         }
     </script>
 
