Shrink Page bitmap

--- a/templates/page.html
+++ b/templates/page.html
@@ -52,7 +52,7 @@
   </head>
   <body>
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
-    <center><img src = "http://keithcu.com/images/LinuxReport2.png" height = "100"></center>
+    <center><img src = "http://keithcu.com/images/LinuxReport2.webp" height = "100"></center>
     <center><small>(Refreshes hourly) - Fork me on <a href = "https://github.com/KeithCu/LinuxReport">GitHub</a></small></center>
     <div class="row">
 
