--- a/templates/page.html
+++ b/templates/page.html
@@ -14,6 +14,10 @@
         color: black;
       }
 
+      img {
+        max-width: 100%;
+      }
+
       .linkclass {
         margin-bottom: .4em;
       }
@@ -44,7 +48,7 @@
   </head>
   <body>
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
-    <center><img src="http://keithcu.com/images/LinuxReport2.webp" height="100"></center>
+    <center><img src="http://keithcu.com/images/LinuxReport2.webp" style="max-height:100px;"></center>
     <center><small>(Refreshes hourly) - Fork me on <a href = "https://github.com/KeithCu/LinuxReport">GitHub</a> or <a href = "https://gitlab.com/keithcu/linuxreport">GitLab.</a></small></center>
     <div class="row">
       <div class="column">{{ columns[0] }}</div>
