--- a/templates/sitebox.html
+++ b/templates/sitebox.html
@@ -1,5 +1,5 @@
 {% block content %}
-    <center><a target="_blank" href="{{ link }}"><img src="{{ logo }}" height="75"/></a></center>
+    <center><a target="_blank" href="{{ link }}"><img src="{{ logo }}" style="max-height:75px;"/></a></center>
     <br/>
     <div class="box">
         {% for e in entries %}
