--- a/templates/config.html
+++ b/templates/config.html
@@ -1,16 +1,15 @@
-{% macro render_field(field) %}
+{%- macro render_field(field) %}
   <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
-  {% if field.errors %}
+  {%- if field.errors %}
     <ul class=errors>
-    {% for error in field.errors %}
+    {%- for error in field.errors %}
       <li>{{ error }}</li>
-    {% endfor %}
+    {%- endfor %}
     </ul>
-  {% endif %}
+  {%- endif %}
   </dd>
-{% endmacro %}
-
+{%- endmacro %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -20,11 +19,11 @@
 </head>
 <body>
 <form method="POST">
-    Delete the cookie:
-    {{ form.delete_cookie }}
-    {{ form.urls }}
-    {{ form.url_custom }}
-    <button type="save" name="save">Save</button>
+  Delete the cookie:
+  {{ form.delete_cookie }}
+  {{ form.urls }}
+  {{ form.url_custom }}
+  <button type="save" name="save">Save</button>
 </form>
 </body>
 </html>
