--- a/templates/page.html
+++ b/templates/page.html
@@ -18,7 +18,7 @@
         margin-bottom: .4em;
       }
 
-      {% if not request.MOBILE %}
+      {%- if not request.MOBILE %}
       /* Create three equal columns that floats next to each other */
       .column {
         float: left;
@@ -31,16 +31,13 @@
         display: table;
         clear: both;
       }
-      {% endif %}
-
+      {%- endif %}
     </style>
-
     <script>
       function redirect() {
         window.location = "/config"
       }
     </script>
-
   </head>
   <body>
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
