--- a/templates/page.html
+++ b/templates/page.html
@@ -43,7 +43,7 @@
       }
     </script>
   </head>
-  <body>
+  <body style="background-color:#f6f5f4">
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
     <center><img src="http://linuxreport.net/static/images/LinuxReport2.png" style="max-height:100px;"></center>
     <center><small>(Refreshes hourly) - Fork me on <a href = "https://github.com/KeithCu/LinuxReport">GitHub</a> or <a href = "https://gitlab.com/keithcu/linuxreport">GitLab.</a></small></center>
