--- a/templates/config.html
+++ b/templates/config.html
@@ -21,6 +21,9 @@
 <form method="POST">
   Delete the cookie:
   {{ form.delete_cookie }}
+  <br/>
+  Dark Mode:
+  {{ form.dark_mode }}
   {{ form.urls }}
   {{ form.url_custom }}
   <button type="save" name="save">Save</button>
