--- a/templates/page.html
+++ b/templates/page.html
@@ -49,7 +49,7 @@
   </head>
   <body style="background-color:{{ back_color }}">
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
-    <center><img src="http://linuxreport.net/static/images/LinuxReport2.png" style="max-height:100px;"></center>
+    <center><img src="{{logo_url}}" style="max-height:100px;"></center>
     <center><small>(Refreshes hourly - Try Dark Mode!) - Fork me on <a href = "https://github.com/KeithCu/LinuxReport">GitHub</a> or <a href = "https://gitlab.com/keithcu/linuxreport">GitLab.</a></small></center>
     <div class="row">
       <div class="column">{{ columns[0] }}</div>
