--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" href="{{favicon}}">
+    <link rel="shortcut icon" type="image/png" href="{{favicon}}">
+    <link rel="shortcut icon" sizes="192x192" href="{{favicon}}">
+    <link rel="apple-touch-icon" href="{{favicon}}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
