Add meta and alt tags

--- a/templates/page.html
+++ b/templates/page.html
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" href="{{favicon}}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content = "{{description}}">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
     <style>
