--- a/templates/page.html
+++ b/templates/page.html
@@ -18,6 +18,10 @@
         color:{{ text_color }};
       }
 
+      a {
+          {{ a_text_decoration }}
+      }
+
       a:link, a:visited, a:hover, a:active {
         color:{{ text_color }};
       }
