--- a/templates/page.html
+++ b/templates/page.html
@@ -59,6 +59,7 @@
   </head>
   <body style="background-color:{{ back_color }}">
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
+    <center>{{ above_html }}</center>
     <center><img src="{{logo_url}}" alt = "{{ title }}" style="max-height:100px;"></center>
     <center><small>{{ welcome_html }}</small></center>
     <div class="row">
