--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" type="image/png" href="{{favicon}}">
-    <link rel="shortcut icon" sizes="192x192" href="{{favicon}}">
+    <link rel="icon" type="image/png" href="{{favicon}}">
     <link rel="apple-touch-icon" href="{{favicon}}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +33,7 @@
         margin-bottom: .6em;
       }
 
-      {%- if not request.MOBILE %}
+      {%- if not g.is_mobile %}
       /* Create three equal columns that floats next to each other */
       .column {
         float: left;
@@ -64,10 +63,11 @@
     <center><small>{{ welcome_html }}</small></center>
     <div class="row">
       <div class="column">{{ columns[0] }}</div>
-      {%- if not request.MOBILE %}
+      {%- if not g.is_mobile %}
       <div class="column">{{ columns[1] }}</div>
       <div class="column">{{ columns[2] }}</div>
       {%- endif %}
     </div>
   </body>
 </html>
+ 
