--- a/templates/sitebox.html
+++ b/templates/sitebox.html
@@ -12,6 +12,6 @@
 </div>
 <br />
 <div class="pagination-controls" data-feed-id="feed-{{ feed_id }}">
-  <button class="prev-btn" disabled>Previous</button>
-  <button class="next-btn">Next</button>
+  <button class="prev-btn" disabled>&lt;</button>
+  <button class="next-btn">&gt;</button>
 </div>
