add sans serif, change font size. above headlines content

--- a/templates/config.html
+++ b/templates/config.html
@@ -28,6 +28,9 @@
   No underlines:
   {{ form.no_underlines }}
   <br />
+  Sans Serif:
+  {{ form.sans_serif }}
+  <br />
   {{ form.urls }}
   {{ form.url_custom }}
   <button type="save" name="save">Save</button>
