let people know you can customize order.

--- a/templates/config.html
+++ b/templates/config.html
@@ -102,6 +102,7 @@
       <label for="sans_serif">Sans Serif Font:</label>
       {{ form.sans_serif }}
     </div>
+    <div><I>Drag and Drop to have a custom order.</I></div>
     <div class="url-list">
       {% for urlf in form.urls %}
       <div class="url-entry" draggable="true">
