--- a/templates/page.html
+++ b/templates/page.html
@@ -33,7 +33,7 @@
 
       .linkclass {
         margin-bottom: .6em;
-        font-size: medium
+        font-size: large
       }
 
       {%- if not g.is_mobile %}
