links to the others at the top

--- a/templates/page.html
+++ b/templates/page.html
@@ -110,6 +110,15 @@
     </script>
   </head>
   <body style="background-color:{{ back_color }}">
+    <center>
+    <div style="border: 1px solid gray; padding: 5px; margin: 5px; display: inline-block; font-size: small;">
+      <a href="https://linuxreport.net" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Linux</a>
+      <a href="https://covidreport.org" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Covid</a>
+      <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">AI</a>
+      <a href="https://trumpreport.info" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Trump</a>
+      <a href="/space" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Space</a>
+    </div>
+  </center>
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
     <center>{{ above_html }}</center>
     <center><img src="{{logo_url}}" alt = "{{ title }}" style="max-height:175px;"></center>
