--- a/templates/page.html
+++ b/templates/page.html
@@ -115,7 +115,7 @@
       <a href="https://linuxreport.net" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Linux</a>
       <a href="https://covidreport.org" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Covid</a>
       <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">AI</a>
-      <a href="https://trumpreport.info" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Trump</a>
+      <a href="https://trumpreport.info" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Truth</a>
       <a href="/space" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Space</a>
     </div>
   </center>
