--- a/templates/page.html
+++ b/templates/page.html
@@ -117,7 +117,7 @@
       <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">AI</a>
       <a href="https://trumpreport.info" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Truth</a>
       <a href="https://news.spaceelevatorwiki.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Space</a>
-      <a href="https://keithcu.com/wordpress/page_id=407" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Me</a>
+      <a href="https://keithcu.com/wordpress/?page_id=407/" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Me</a>
     </div>
   </center>
     <div style="text-align:right"><button type="save" name="save" onclick="redirect()">Config...</button></div>
