--- a/templates/page.html
+++ b/templates/page.html
@@ -120,7 +120,7 @@
           <a href="https://covidreport.org" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Covid</a>
           <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">AI</a>
           <a href="https://trumpreport.info" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Truth</a>
-          <a href="https://spaceelevatorwiki.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Space Soon</a>
+          <a href="https://spaceelevatorwiki.com" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Space-Soon</a>
           <a href="https://keithcu.com/wordpress/?page_id=407/" target="_blank" style="margin: 2px; text-decoration: none; color: inherit;">Me</a>
         </div>
         <button type="save" name="save" onclick="redirect()" style="margin-left: 20px;">Config...</button>
