try out tooltips if available

--- a/templates/sitebox.html
+++ b/templates/sitebox.html
@@ -1,7 +1,7 @@
 <div class="box" id="feed-{{ feed_id }}">
   <center><a target="_blank" href="{{ link }}"><img src="{{ logo }}" alt="{{ alt_tag | safe }}" style="max-height:100px;"/></a></center>
   <center>
-  <small>Last updated: {{ last_fetch }}</small>
+    <small>Last updated: {{ last_fetch }}</small>
   </center>
   <div class="pagination-controls" data-feed-id="feed-{{ feed_id }}">
     <button class="prev-btn" disabled><</button>
@@ -18,7 +18,10 @@
     {% endif %}
     <div class="title-container">
       <code>
-        <a target="_blank" href="{{ e.link | safe }}">{{ e.title | safe }}</a>
+        <a target="_blank" href="{{ e.link | safe }}" 
+           title="{{ e.html_content | striptags | truncate(500) | safe if e.html_content else e.summary | striptags | truncate(500) | safe if e.summary else 'No additional information available'}}">
+          {{ e.title | safe }}
+        </a>
       </code>
     </div>
   </div>
